--- a/workshop3/workshopI_2024.Rmd
+++ b/workshop3/workshopI_2024.Rmd
@@ -49,7 +49,7 @@ Your action points may include directives to gather more information (e.g., cont
 
 You may choose to include mathematical modeling as part of your decision making (for example, using an [epidemic calculator](http://gabgoh.github.io/COVID/index.html) or other models); if you do so, you should provide details of your modelling and predictions when you submit your group's pro forma.
 
-You should submit 3-5 specific actions to control the pandemic, using the [workshop 3 pro forma](/proformas/BM424_workshop3_proforma.docx) (also available on MyPlace). Submit this by noon, Friday March 1st, via the submission link on MyPlace. 
+You should submit 3-5 specific actions to control the pandemic, using the [workshop 3 pro forma](../proformas/BM424_workshop3_proforma.docx) (also available on MyPlace). Submit this by noon, Friday March 1st, via the submission link on MyPlace. 
 
 ***
 
@@ -121,9 +121,9 @@ kable(x = Councillors,
 
 ```
 <br><br>
-The overall budget (expenditures) for the 2021-2022 financial year is £`r sample(400000000:600000000, size=1)`. A summary of expenditures by category for this financial year is shown below. 
+The overall budget (expenditures) for the 2022-2023 financial year was £`r sample(400000000:600000000, size=1)`. A summary of expenditures by category for this financial year is shown below. 
 
-```{r A4, fig.cap="Public expenditures by category for the 2021-2022 financial year (Source: Ardkeld City Council)", echo=FALSE}
+```{r A4, fig.cap="Public expenditures by category for the 2022-2023 financial year (Source: Ardkeld City Council)", echo=FALSE}
 
 expenses <- data.frame(
   Category=c("Education", "Industry and Agriculture", "Social Care", "Transport", "Public order and safety", "Healthcare", "Housing", "Other"),
@@ -330,9 +330,9 @@ You are the director of `r city_name`'s main hospital, the `r hospital_name`, wh
 knitr::include_graphics(rep("images/Riverview2.png"))
 ```
 
-The annual operating budget for financial year 2021-2022 was £1.5 million, and average expenditures are shown by category in the figure below. 
+The annual operating budget for financial year 2022-2023 was £1.5 million, and average expenditures are shown by category in the figure below. 
 
-```{r A5, fig.cap="Hospital expenditures by category for financial year 2021-2022 (Source: NHS Scotland)", echo=FALSE}
+```{r A5, fig.cap="Hospital expenditures by category for financial year 2022-2023 (Source: NHS Scotland)", echo=FALSE}
 
 expenses <- data.frame(
   Category=c("Staff costs", "Healthcare expenditures (drugs, supplies, etc.)", "Other supplies", "Other running costs (procurement, IT, HR, etc.)"),
@@ -512,11 +512,11 @@ You are familiar with the culture requirements for growth of <i>Bacillus anthrac
 knitr::include_graphics(rep("images/Banthracis-BloodAgar.jpg"))
 ```
 
-Tyśkiewicz R, Fedorowicz M, Nakonieczna A, Zielińska P, Kwiatek M, Mizak L. Electrochemical, optical and mass-based immunosensors: A comprehensive review of Bacillus anthracis detection methods. Anal Biochem. 2023;675:115215. doi:10.1016/j.ab.2023.115215
+Tyśkiewicz R, Fedorowicz M, Nakonieczna A, Zielińska P, Kwiatek M, Mizak L. Electrochemical, optical and mass-based immunosensors: A comprehensive review of <i>Bacillus anthracis</i> detection methods. Anal Biochem. 2023;675:115215. doi:10.1016/j.ab.2023.115215
 
-Wang D, Chen G, Lyu Y, et al. A CRISPR/Cas12a-based DNAzyme visualization system for rapid, non-electrically dependent detection of Bacillus anthracis. Emerg Microbes Infect. 2022;11(1):428-437. doi:10.1080/22221751.2021.2012091
+Wang D, Chen G, Lyu Y, et al. A CRISPR/Cas12a-based DNAzyme visualization system for rapid, non-electrically dependent detection of <i>Bacillus anthracis</i>. Emerg Microbes Infect. 2022;11(1):428-437. doi:10.1080/22221751.2021.2012091
 
-Witt N, Galante D, Andreotti S, et al. Identification of Universally Applicable and Species-Specific Marker Peptides for Bacillus anthracis. Life (Basel). 2022;12(10):1549. Published 2022 Oct 6. doi:10.3390/life12101549
+Witt N, Galante D, Andreotti S, et al. Identification of Universally Applicable and Species-Specific Marker Peptides for <i>Bacillus anthracis</i>. Life (Basel). 2022;12(10):1549. Published 2022 Oct 6. doi:10.3390/life12101549
 
 ***
 
@@ -561,6 +561,8 @@ You are one of the doctors at the largest surgery in `r city_name`. In the past 
 
 * Liu Y, Zheng G, Li J, et al. A Case Report of Cutaneous Anthrax Diagnosed by Using a Metagenomic Next-Generation Sequencing (mNGS) Approach. Infect Drug Resist. 2023;16:3601-3606. Published 2023 Jun 7. doi:10.2147/IDR.S411717
 
+***
+
 ## Information Packet I9 
 
 You are an epidemiologist working at the University of `r city_name`, and have been studying <i>Bacillus anthracis</i> transmission dynamics for the past `r sample(2:10, size=1)` years. As such, you are very familiar with the relevant literature, including papers such as: 
@@ -573,10 +575,10 @@ Price EP, Seymour ML, Sarovich DS, et al. Molecular epidemiologic investigation 
 
 Tourasse NJ, Jolley KA, Kolstø AB, Økstad OA. Core genome multilocus sequence typing scheme for Bacillus cereus group bacteria. Res Microbiol. 2023;174(6):104050. doi:10.1016/j.resmic.2023.104050
 
-Booth M, Donaldson L, Cui X, et al. Confirmed Bacillus anthracis infection among persons who inject drugs, Scotland, 2009-2010. Emerg Infect Dis. 2014;20(9):1452-1463. doi:10.3201/eid2009.131481
+Booth M, Donaldson L, Cui X, et al. Confirmed <i>Bacillus anthracis</i> infection among persons who inject drugs, Scotland, 2009-2010. Emerg Infect Dis. 2014;20(9):1452-1463. doi:10.3201/eid2009.131481
 
 Braun P, Beyer W, Hanczaruk M, et al. Reoccurring Bovine Anthrax in Germany on the Same Pasture after 12 Years. J Clin Microbiol. 2022;60(3):e0229121. doi:10.1128/jcm.02291-21
 
-Metrailer MC, Hoang TTH, Jiranantasak T, et al. Spatial and phylogenetic patterns reveal hidden infection sources of Bacillus anthracis in an anthrax outbreak in Son La province, Vietnam. Infect Genet Evol. 2023;114:105496. doi:10.1016/j.meegid.2023.105496
+Metrailer MC, Hoang TTH, Jiranantasak T, et al. Spatial and phylogenetic patterns reveal hidden infection sources of <i>Bacillus anthracis</i> in an anthrax outbreak in Son La province, Vietnam. Infect Genet Evol. 2023;114:105496. doi:10.1016/j.meegid.2023.105496
 
 
